# mathfilm

./: .gitignore  __init__.py  pyproject.toml
actions/: __init__.py  base.py  composite.py  create.py  hide.py  move_to.py  parallel.py  sequence.py  show.py  stagger.py  transform.py  write.py
core/: __init__.py  action.py  director.py  enums.py  narration.py  section.py  timeline.py  types.py
engine/: __init__.py  manim_scene_adapter.py  scene_adapter.py  video_scene.py
mathfilm.egg-info/: PKG-INFO  SOURCES.txt
