[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mathfilm"
version = "0.3.0"
description = "API declarativa para crear videos matemáticos con Manim"
requires-python = ">=3.10"
dependencies = [
    "manim",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mathfilm*"]